			Memo
			Reminds you about things
			by Thomas Leonard

TODO:
- Option/button to speak the time

10-Sep-2002
~~~~~~~~~~~
Toggle hidden had stopped working with new pygtk.

07-Aug-2002
~~~~~~~~~~~
Text box for memo message now scrolls correctly (instead of just getting
larger and larger!).

13-Jul-2002 (Release 1.9.0)
~~~~~~~~~~~
Turned on word-wrapping in the editor dialog.

03-Jul-2002
~~~~~~~~~~~
Upgraded to Gtk+-2.0 and ROX-Lib2. New features:

- Dialog style for window.
- Options window (Sticky, Time style and Limits on which messages to display).
- When an alarm goes off, offer to hide the memo rather than delete it.
- Double-beep before showing alarm.
- Show All feature so you can see memos that are hidden or too far in the
  future.
- Delete multiple memos at once (from Show All box).

09-Nov-2001
~~~~~~~~~~~
Make 'Edit' the default button when an alarm appears, not 'Remove'.

25-Sep-2001 (Release 1.0.0)
~~~~~~~~~~~
Bugfix: Messages with <, > or & characters didn't save correctly.

17-Jul-2001
~~~~~~~~~~~
Beep and wait a second before showing an alarm. Otherwise, if an alarm
appears while you're typing you can lose it.

30-May-2001
~~~~~~~~~~~
Switched to using ROX-Lib.

29-May-2001 (Release 0.1.1)
~~~~~~~~~~~
Added AppInfo file.

19-Jan-2001
~~~~~~~~~~~
Main window widgets don't grab the focus (looks better).

13-Jan-2001
~~~~~~~~~~~
Started.